fixed some things

--- a/Public/index.html
+++ b/Public/index.html
@@ -35,8 +35,8 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/logo.png" alt="Tretize Royale Logistics" style="height:40px;" class="me-2" />
-        <h1 class="sitename">Tretize Royale</h1>
+        <img src="assets/img/logo.png" alt="Tretize Royale Logistics" style="height:auto; width: auto;" class="me-2" />
+        <h1 class="sitename">Tretize Royale Logistics Ltd.</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -50,10 +50,12 @@
               <li><a href="#">Careers</a></li>
               <li><a href="#">Partnerships</a></li>
               <li><a href="#">Sustainability</a></li>
+              <li><a href="worker.html">Worker Portal</a></li>
             </ul>
           </li>
+          <li><a href="#track">Track</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="worker.html">Worker Portal</a></li>
+          
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -72,11 +74,11 @@
       <div class="container">
         <div class="row gy-4 d-flex justify-content-between align-items-center">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h2 data-aos="fade-up">Delivering Logistics Excellence — Every Mile</h2>
-            <p data-aos="fade-up" data-aos-delay="100">
-              From long-haul freight to last-mile delivery, Tretize Royale connects businesses across Nigeria through
-              speed, accuracy and trust.
-            </p>
+      <h2 data-aos="fade-up">Delivering Global Logistics Excellence — Every Mile</h2>
+<p data-aos="fade-up" data-aos-delay="100">
+  From Africa to the world, Tretize Royale connects industries through air, land, and sea freight — providing reliable,
+  technology-driven logistics that empower trade across borders.
+</p>
 
             <!-- Call to Quote Button (replaces inline form) -->
             <div data-aos="fade-up" data-aos-delay="200">
@@ -162,10 +164,13 @@
 
           <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
             <h3>About Tretize Royale Logistics</h3>
-            <p>
-              We are a modern logistics company bridging efficiency and technology to ensure safe, timely deliveries across Nigeria.  
-              With a focus on innovation and trust, our network covers air, land and warehousing solutions.
-            </p>
+           <p>
+  We are a modern logistics company bridging efficiency and technology to ensure safe, timely deliveries
+  across Africa and beyond.  
+  With a focus on innovation and trust, our network covers international air freight, land haulage,
+  sea logistics, and warehousing solutions that serve clients across multiple continents.
+</p>
+
             <ul>
               <li>
                 <i class="bi bi-diagram-3"></i>
@@ -206,7 +211,8 @@
       <div class="container section-title" data-aos="fade-up">
         <span>Our Services</span>
         <h2>Comprehensive Logistics Solutions</h2>
-        <p>Tailored freight and distribution services built to support Nigeria’s fast-growing supply chains.</p>
+       <p>Tailored freight and distribution services built to support regional and international supply chains across Africa, the Middle East, and beyond.</p>
+
       </div>
 
       <div class="container">
@@ -270,8 +276,10 @@
         <div class="text-center">
           <h3>Partner with Tretize Royale Logistics</h3>
           <p>
-            Delivering logistics excellence through dedication, technology and trust. Join Nigeria’s fastest-growing transport network.
-          </p>
+  Delivering logistics excellence through dedication, technology and trust.
+  Partner with a logistics network that connects Africa to the world.
+</p>
+
           <a class="cta-btn" href="#get-a-quote">Request a Quote</a>
         </div>
       </div>
@@ -401,20 +409,22 @@
   </div>
 
   <!-- Nigerian Breweries -->
+ 
   <div class="swiper-slide">
-    <div class="testimonial-item text-center">
-      <img src="assets/img/testimonials/nb.jpg" class="testimonial-img" alt="Nigerian Breweries testimonial" />
-      <h3>Nigerian Breweries Plc</h3>
-      <h4>Engineering Supply Division</h4>
-      <p>
-        <i class="bi bi-quote quote-icon-left"></i>
-        <span>
-          Our partnership with Tretize Royale ensured seamless movement of high-volume equipment and materials during expansion projects. Their professionalism kept our production targets on schedule.
-        </span>
-        <i class="bi bi-quote quote-icon-right"></i>
-      </p>
-    </div>
+  <div class="testimonial-item text-center">
+    <img src="assets/img/testimonials/sfh.jpg" class="testimonial-img" alt="Society for Family Health testimonial" />
+    <h3>Society for Family Health (SFH)</h3>
+    <h4>Public Health & Community Outreach Partner</h4>
+    <p>
+      <i class="bi bi-quote quote-icon-left"></i>
+      <span>
+        Working with Tretize Royale Logistics has strengthened our nationwide distribution of essential medical supplies.
+        Their efficiency and reliability have been key to ensuring timely delivery across multiple health facilities.
+      </span>
+      <i class="bi bi-quote quote-icon-right"></i>
+    </p>
   </div>
+</div>
 
   <!-- SeeDCO -->
   <div class="swiper-slide">
@@ -440,6 +450,47 @@
       </div>
     </section>
     <!-- /Testimonials Section -->
+<!-- ======= Awards & Recognition Section ======= -->
+<section id="awards" class="awards section light-background">
+  <div class="container section-title" data-aos="fade-up">
+    <span>Awards & Recognition</span>
+    <h2>Honoring Excellence and Dedication</h2>
+   <p>Recognized by partners across Africa and overseas for outstanding performance, commitment, and service delivery excellence.</p>
+
+  </div>
+
+  <div class="container">
+    <div class="row gy-4">
+      <!-- Horizon Organic Award -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="award-card text-center p-4 shadow-sm rounded-3">
+          <img src="assets/img/awards/horizon-award.jpg" alt="Horizon Organic Award" class="award-img mb-3">
+          <h4>Horizon Organic Spices Ltd.</h4>
+          <p class="award-desc">Appreciation Award presented to <strong>Moses Opatokun the C.O.O</strong> for ongoing commitment and dedicated service. <em>(July 2021)</em></p>
+        </div>
+      </div>
+
+      <!-- La Casera Award -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="award-card text-center p-4 shadow-sm rounded-3">
+          <img src="assets/img/awards/lacasera-award.jpg" alt="La Casera Award" class="award-img mb-3">
+          <h4>The La Casera Company Plc</h4>
+          <p class="award-desc">Performance Award for excellence and partnership towards company growth. <em>(Year 2021)</em></p>
+        </div>
+      </div>
+
+      <!-- MEBS Global Certificate -->
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="award-card text-center p-4 shadow-sm rounded-3">
+          <img src="assets/img/awards/mebs-certificate.jpg" alt="MEBS Global Certificate" class="award-img mb-3">
+          <h4>MEBS Global</h4>
+          <p class="award-desc">Certificate of Recognition presented to Tretize Royale Logistics Ltd. for outstanding logistics performance. <em>(February 2025)</em></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- /Awards & Recognition Section -->
 
     <!-- ======= FAQ Section ======= -->
     <section id="faq" class="faq section">
@@ -560,6 +611,7 @@
       <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
         <h4>Contact Us</h4>
         <p><strong>Email:</strong> <a href="mailto:tretize3ts@gmail.com">tretize3ts@gmail.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:tretize3ts@yahoo.com">tretize3ts@yahoo.com</a></p>
         <p><strong>Phone:</strong> +2348036090618, +2348186408365</p>
       </div>
     </div>
