--- a/Public/index.html
+++ b/Public/index.html
@@ -88,18 +88,22 @@
             <!-- Stats -->
             <div class="row gy-4 mt-4" data-aos="fade-up" data-aos-delay="300">
               <div class="col-lg-3 col-6 text-center">
+                <i class="fas fa-users icon"></i>
                 <span data-purecounter-start="0" data-purecounter-end="700" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Clients Served</p>
               </div>
               <div class="col-lg-3 col-6 text-center">
+                <i class="fas fa-truck-moving icon"></i>
                 <span data-purecounter-start="0" data-purecounter-end="1500" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Successful Deliveries</p>
               </div>
               <div class="col-lg-3 col-6 text-center">
+                 <i class="fas fa-car-side icon"></i>
                 <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Fleet Vehicles</p>
               </div>
               <div class="col-lg-3 col-6 text-center">
+                 <i class="fas fa-user-gear icon"></i>
                 <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Team Members</p>
               </div>
