fixed some extra

--- a/Public/index.html
+++ b/Public/index.html
@@ -284,7 +284,7 @@
   Partner with a logistics network that connects Africa to the world.
 </p>
 
-          <a class="cta-btn" href="#get-a-quote">Request a Quote</a>
+          <a class="cta-btn" href="get-a-quote.html">Request a Quote</a>
         </div>
       </div>
     </section>
