--- a/Public/index.html
+++ b/Public/index.html
@@ -170,7 +170,7 @@
             <h3>About Tretize Royale Logistics</h3>
            <p>
   We are a modern logistics company bridging efficiency and technology to ensure safe, timely deliveries
-  across Africa and beyond.  
+  across the Globe.  
   With a focus on innovation and trust, our network covers international air freight, land haulage,
   sea logistics, and warehousing solutions that serve clients across multiple continents.
 </p>
@@ -215,7 +215,7 @@
       <div class="container section-title" data-aos="fade-up">
         <span>Our Services</span>
         <h2>Comprehensive Logistics Solutions</h2>
-       <p>Tailored freight and distribution services built to support regional and international supply chains across Africa, the Middle East, and beyond.</p>
+       <p>Tailored freight and distribution services built to support regional and international supply chains across the Globe.</p>
 
       </div>
 
@@ -264,8 +264,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="card">
               <div class="card-img"><img src="assets/img/service-6.jpg" alt="Consulting" class="img-fluid" /></div>
-              <h3>Logistics Consulting</h3>
-              <p>Strategic advice for businesses seeking to modernize their supply chains and optimize cost efficiency.</p>
+              <h3>Monitoring & Evaluation</h3>
+<p>Comprehensive data collection, analysis, and reporting to assess project performance, ensure accountability, and drive informed decision-making.</p>
             </div>
           </div>
         </div>
@@ -389,7 +389,7 @@
       <p>
         <i class="bi bi-quote quote-icon-left"></i>
         <span>
-          From farm to shelf, Tretize Royale keeps our cold-chain logistics seamless. Their commitment to quality control and punctuality has strengthened our retail partnerships across Nigeria.
+          From farm to shelf, Tretize Royale keeps our cold-chain logistics seamless. Their commitment to quality control and punctuality has strengthened our retail partnerships across the Globe.
         </span>
         <i class="bi bi-quote quote-icon-right"></i>
       </p>
@@ -459,7 +459,7 @@
   <div class="container section-title" data-aos="fade-up">
     <span>Awards & Recognition</span>
     <h2>Honoring Excellence and Dedication</h2>
-   <p>Recognized by partners across Africa and overseas for outstanding performance, commitment, and service delivery excellence.</p>
+   <p>Recognized by partners across the Globe for outstanding performance, commitment, and service delivery excellence.</p>
 
   </div>
 
