--- a/Public/worker.html
+++ b/Public/worker.html
@@ -140,7 +140,7 @@
             </select>
           </div>
           <div class="row">
-            <input name="weight" placeholder="Weight (kg)">
+            <input name="weight" placeholder="Weight (kg)(optional)">
             <input name="vehicle" placeholder="Vehicle / Plate">
             <input name="driver" placeholder="Driver">
           </div>
