--- a/Public/contact.html
+++ b/Public/contact.html
@@ -82,7 +82,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+2348036090618<br>+2348186408365</p>
+                <p>+2348186408365<br>+2348036090618</p>
               </div>
             </div>
 
@@ -90,7 +90,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p><a href="mailto:tretize3ts@gmail.com">tretize3ts@gmail.com</a></p>
+                <p><a href="mailto:tretize3ts@gmail.com">tretize3ts@gmail.com</a><br><a href="mailto:tretize3ts@yahoo.com">tretize3ts@yahoo.com</a></p>
               </div>
             </div>
           </div>
