--- a/Public/contact.html
+++ b/Public/contact.html
@@ -49,7 +49,7 @@
   </header>
 
   <main class="main">
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.jpg);">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/contact-bg.png);">
       <div class="container position-relative">
         <h1>Contact Us</h1>
         <p>We’re here to move your business forward — reach out to Tretize Royale Logistics for tailored transport and freight solutions.</p>
