--- a/Public/index.html
+++ b/Public/index.html
@@ -89,17 +89,17 @@
             <div class="row gy-4 mt-4" data-aos="fade-up" data-aos-delay="300">
               <div class="col-lg-3 col-6 text-center">
                 <i class="fas fa-users icon"></i>
-                <span data-purecounter-start="0" data-purecounter-end="700" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="2500" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Clients Served</p>
               </div>
               <div class="col-lg-3 col-6 text-center">
                 <i class="fas fa-truck-moving icon"></i>
-                <span data-purecounter-start="0" data-purecounter-end="1500" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="8239" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Successful Deliveries</p>
               </div>
               <div class="col-lg-3 col-6 text-center">
                  <i class="fas fa-car-side icon"></i>
-                <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Fleet Vehicles</p>
               </div>
               <div class="col-lg-3 col-6 text-center">
@@ -160,11 +160,34 @@
     <section id="about" class="about section">
       <div class="container">
         <div class="row gy-4">
-          <div class="col-lg-6 position-relative align-self-start order-lg-last order-first" data-aos="fade-up"
-            data-aos-delay="200">
-            <img src="assets/img/about.jpg" class="img-fluid rounded-3" alt="Warehouse Operations" />
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
-          </div>
+         <div class="col-lg-6 position-relative align-self-start order-lg-last order-first" data-aos="fade-up" data-aos-delay="200">
+
+  <div id="aboutCarousel" class="carousel slide carousel-fade rounded-3 shadow-sm" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/img/about.jpg" class="d-block w-100 img-fluid" alt="Warehouse Operations">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/about1.jpg" class="d-block w-100 img-fluid" alt="Fleet on the Move">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/about2.jpg" class="d-block w-100 img-fluid" alt="Logistics Coordination">
+      </div>
+    </div>
+
+    <!-- optional fade controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#aboutCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#aboutCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+</div>
+
 
           <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
             <h3>About Tretize Royale Logistics</h3>
@@ -334,15 +357,10 @@
             <img src="assets/img/features-3.jpg" class="img-fluid rounded-3" alt="Warehouse Logistics" />
           </div>
           <div class="col-md-7" data-aos="fade-up" data-aos-delay="300">
-            <h3>Smart Warehousing Integration</h3>
-            <p>
-              Our warehouse facilities are strategically placed across major cities and integrated with digital inventory systems.
-            </p>
-            <ul>
-              <li><i class="bi bi-check"></i> Temperature-controlled units.</li>
-              <li><i class="bi bi-check"></i> Digital inventory tracking and forecasting.</li>
-              <li><i class="bi bi-check"></i> Automated stock movement notifications.</li>
-            </ul>
+            <h3>Nationwide Storage & Dispatch Hubs</h3>
+<p>
+  We operate secure and efficient storage hubs that support fast loading, offloading, and last-mile dispatch. Each location is managed by trained staff to ensure timely movement of goods and smooth coordination across routes.
+</p>
           </div>
         </div>
       </div>
@@ -470,7 +488,7 @@
         <div class="award-card text-center p-4 shadow-sm rounded-3">
           <img src="assets/img/awards/horizon-award.jpg" alt="Horizon Organic Award" class="award-img mb-3">
           <h4>Horizon Organic Spices Ltd.</h4>
-          <p class="award-desc">Appreciation Award presented to <strong>Moses Opatokun the C.O.O</strong> for ongoing commitment and dedicated service. <em>(July 2021)</em></p>
+          <p class="award-desc">Appreciation Award presented to <strong>Moses Opadokun the C.O.O</strong> for ongoing commitment and dedicated service. <em>(July 2021)</em></p>
         </div>
       </div>
 
