--- a/Public/index.html
+++ b/Public/index.html
@@ -173,6 +173,9 @@
       <div class="carousel-item">
         <img src="assets/img/about2.jpg" class="d-block w-100 img-fluid" alt="Logistics Coordination">
       </div>
+        <div class="carousel-item">
+        <img src="assets/img/about3.jpg" class="d-block w-100 img-fluid" alt="Logistics Coordination">
+      </div>
     </div>
 
     <!-- optional fade controls -->
