logo change again

--- a/Public/index.html
+++ b/Public/index.html
@@ -193,7 +193,7 @@
 
 
           <div class="col-lg-6 content order-last order-lg-first" data-aos="fade-up" data-aos-delay="100">
-            <h3>About Tretize Royale Logistics</h3>
+            <h3>About Tretize Royale Logistics ltd</h3>
            <p>
   We are a modern logistics company bridging efficiency and technology to ensure safe, timely deliveries
   across the Globe.  
@@ -304,7 +304,7 @@
       <img src="assets/img/cta-bg.jpg" alt="" class="cta-bg" />
       <div class="container" data-aos="zoom-in">
         <div class="text-center">
-          <h3>Partner with Tretize Royale Logistics</h3>
+          <h3>Partner with Tretize Royale Logistics Ltd.</h3>
           <p>
   Delivering logistics excellence through dedication, technology and trust.
   Partner with a logistics network that connects Africa to the world.
@@ -443,7 +443,7 @@
     <p>
       <i class="bi bi-quote quote-icon-left"></i>
       <span>
-        Working with Tretize Royale Logistics has strengthened our nationwide distribution of essential medical supplies.
+        Working with Tretize Royale Logistics L has strengthened our nationwide distribution of essential medical supplies.
         Their efficiency and reliability have been key to ensuring timely delivery across multiple health facilities.
       </span>
       <i class="bi bi-quote quote-icon-right"></i>
